# revkit

./: .envrc  .envrc.local.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py  run.sh  run_cronet.py
.claude/agents/: frida-engineer.md  leader.md  log-monitor.md  mitmproxy-engineer.md  python-engineer.md  reverse-engineer.md  tweak-engineer.md
.claude/skills/: compose.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  postAttachCommand.sh  postCreateCommand.sh
.devcontainer/theos/: Dockerfile
.github/: copilot-instructions.md
.github/instructions/: auth_flow_android.instructions.md  message.instructions.md
.github/workflows/: deployment.yaml  devcontainer-build.yaml  integration.yaml
__handlers__/Foundation.__NSSwiftData/: initWithBase64EncodedString_options_.js
__handlers__/NSData/: initWithBase64EncodedData_options_.js  (+1 more)
docs/: README.ja.md  auth_flow_android.md  auth_flow_android_api.md  esn_android.md  manifest_android.md  manifest_ios.md  msl_android.md  msl_ios.md  netflix_client_spec.md  platform_flow_comparison.md  pxa_esn.md  userauthdata_android.md
docs/netflix/: 03_esn.md  (+10 more)
tools/: analyze_key336_pairs.py  analyze_key336_structure.py  analyze_tfit_chain.py  check_tweak.js  decode_appboot_response.py  decrypt_capture.py  decrypt_key_response.py  dump_rsa_key.py  dump_rsa_struct.py  emulate_tfit.py  extract_wvd.py  find_appboot.js  find_hkdf_all_pairs.py  find_hkdf_correct.py  find_hkdf_exhaustive.py  find_hkdf_final.py  find_hkdf_params.py  find_hkdf_params2.py  find_hkdf_params3.py  find_hkdf_prk.py  find_phase2_hmac_chain.py  find_phase2_kdf_variants.py  find_wrap_key.py  mitmproxy_netflix_filter.py  netflix_msl_client.py  run.py  run_android.sh  run_chrome_cdm.py  run_cronet.py  run_key_extract.py  verify_dh_and_search.py  verify_full_key_chain.py  verify_key.py  verify_phase2_kdf.py
(+64 files in other folders)
