[project]
name = "revkit"
version = "0.1.0"
description = "Reverse engineering toolkit for mobile application security research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asn1crypto>=1.5.1",
    "bcrypt>=5.0.0",
    "cffi>=2.0.0",
    "colorama>=0.4.6",
    "cryptography>=46.0.5",
    "enum34>=1.1.10",
    "frida>=17.9.1",
    "frida-tools>=14.8.1",
    "idna>=3.11",
    "ipaddress>=1.0.23",
    "objection>=1.12.3",
    "paramiko>=4.0.0",
    "prompt-toolkit>=3.0.52",
    "pyasn1>=0.6.2",
    "pycparser>=3.0",
    "pygments>=2.19.2",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.2",
    "scp>=0.15.0",
    "six>=1.17.0",
    "tqdm>=4.67.3",
    "wcwidth>=0.6.0",
    "protobuf>=4.25.1,<5.0.0",
    "pycryptodome>=3.20.0",
    "cbor2>=5.8.0",
    "pywidevine>=1.8.0",
    "lief>=0.17.6",
    "unicorn>=2.1.4",
    "capstone>=5.0.7",
    "mitmproxy>=12.2.1",
]

[dependency-groups]
dev = ["ruff>=0.15.9"]
